# LiSA

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  README.md  scene.rto  scene_old.rto  test_regex  test_regex.cpp
Shaders/compute_shader/: compute_shader_MC.glsl
Shaders/old_compute/: compute_shader.glsl
Shaders/vf_shaders/: vertex_shader.glsl
assets/: chess_pawn.rto  cornell.rto  cornell_box.rto  dragon.rto  panther.rto  spaceship.rto  stormtrooper.rto  test_focal.rto
cuda/: sphere.cu  whitted_cuda.h
data/Plane/: biplane.gltf  biplane_propeller.gltf
images/: cornel_box.ppm  spaceship.ppm  straw.ppm
img/: convert.py
lib/DemandLoading/: PagingSystem.h
lib/DemandLoading/Textures/: BaseColorRequestHandler.cpp  (+3 more)
lib/ImageReader/: EXRReader.cpp
objs/: pawn.mtl
optixHello/: CMakeLists.txt  optixHello.cpp
optixLisa/: CMakeLists.txt  main.cc  optix_wrapper.cc  shader.cu  shader.cu.old  shader2.cu
optixLisa/include/: data.hh  display.hh  optix_wrapper.hh  render.hh  scene_parser.hh  structs.hh
optixLisa/src/: display.cc  main.cc  maths.cu  optix_wrapper.cc  render.cc  scene_parser.cc  shader.cu
optixPathTracer/: CMakeLists.txt  optixPathTracer.cpp  optixPathTracer.cu
optixSphere/: CMakeLists.txt  optixSphere.cpp  optixSphere.cu  optixSphere.h
optixTriangle/: CMakeLists.txt  optixTriangle.cpp  optixTriangle.cu
results_images/coffee/: result1.ppm  result2.ppm  result3.ppm  result4.ppm
results_images/spaceship/: result2.ppm  result_1_5.ppm  result_1_50.ppm
scenes/: big_obj.rto  scene.rto  scene_chess.rto  scene_cornell.rto  scene_old.rto  test.rto
shaders/compute_shader/: compute_shader_MC.glsl
shaders/old_compute/: compute_shader_MC.glsl  compute_shader_MC_old.glsl
shaders/vf_shaders/: fragment_shader.glsl
src/: CMakeLists.txt  main.cpp
src/CMake/: FindOptiX.cmake
src/LiSA/: CMakeLists.txt
src/headers/: dependencies.h  dependencies.hpp  engine.h  engine.hpp  export_image.h  export_image.hpp  opengl_utils.h  opengl_utils.hpp  parse_obj.h  parse_obj.hpp  scene_builder.h  scene_builder.hpp
src/lib/ImageReader/: CMakeLists.txt  CheckerBoardImage.cpp  Exception.h  ImageReader.cpp  Stopwatch.h  TextureInfo.cpp
src/lib/ImageReader/include/ImageReader/: CheckerBoardImage.h  EXRReader.h  ImageReader.h  MultiCheckerImage.h  TextureInfo.h
src/libs/: engine.cpp  export_image.cpp  opengl_utils.cpp  parse_obj.cpp  scene_builder.cpp
src/sutil/: vec_math.h
(+37 files in other folders)
